@@ -32,6 +32,9 @@ struct _SourceWindow
 	GtkWidget *window;
 	GtkWidget *scrolledwin;
 	GtkWidget *text;
+	
+	gboolean updating;
+	gboolean deferred_destroy;
 };
 
 SourceWindow *source_window_create	(void);
